fix(tile): fixing display on Safari browser by adding flex properties

--- a/packages/components/tile/src/components/osds-tile/osds-tile.scss
+++ b/packages/components/tile/src/components/osds-tile/osds-tile.scss
@@ -7,7 +7,9 @@
 
 :host {
   box-sizing: border-box;
+  display: flex;
   flex-direction: row;
+  justify-content: space-between;
   border: solid var(--ods-size-inset-02);
 }
 
